# RayTracingInOneWeekend

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
src/core/: types.h
src/core/math/: blend.h  color.h  ray.h  square.h  transform.h  vec3.h
